apps/media/plex/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: plex
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plex
  template:
    spec:
      containers:
        - name: plex
          image: lscr.io/linuxserver/plex
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 2000m
              memory: 6Gi
            limits:
              cpu: 10000m
              memory: 12Gi
#              nvidia.com/gpu: "1"
          ports:
            - name: http
              containerPort: 32400
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /app/data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-pvc
        - name: media
          persistentVolumeClaim:
            claimName: plex-media-pvc
