apps/media/plex/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plex
  annotations:
    io.cilium/lb-ipam-ips: 192.168.1.132
spec:
  selector:
    app: plex
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 32400
    - name: direct
      port: 32400
      targetPort: 32400
